$Id: History,v 1.18 2000-11-09 19:12:52 gcosmo Exp $
----------------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

             History file for geometry/solids/BREPS
	     --------------------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

09/11/2000 : G. Cosmo            breps-V02-00-01
- QA code revision and cleanup (+fixes from CodeWizard filtering):
  o Added (private) declarations of copy constructor and assignment operator
    where needed: all surfaces, BREP solids, G4CompositeCurve G4OsloMatrix,
    G4PlacedSolid, G4SurfaceList.
  o Defined/fixed copy contructor and assignment operator to curves/conics,
    G4Axis2Placement3D. Added equality check on operator= where needed.
  o Added "const" qualifier to accessor methods, wherever needed.
  o Made destructor "virtual" wherever missing and added empty destructor
    to all BREP solids.
  o Changed virtual functions to non-inline wherever's the case.
  o Moved "public" data members to protected or private and defined
    accessors methods for them: G4BREPSolid, G4BezierSurface, G4ConvexHull,
    G4OsloMatrix, G4Surface, G4SurfaceBoundary, G4SurfaceList, G4UVHit.
    Changed classes involved to invoke accessors.
  o Changed return value to be "const" pointer to functions:
    - G4BREPSolid::GetPlace()
    - G4BREPSolid::GetBBox()