@@ -1,4 +1,4 @@
-$Id: History,v 1.6 2000-11-09 16:35:41 gcosmo Exp $
+$Id: History,v 1.7 2000-11-10 17:44:59 gcosmo Exp $
 ----------------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+10th November 2000  Gabriele Cosmo  (stepinterface-V02-00-01)
+- Added GetInstanceManager() method to G4GeometryCreator.
 
 09th November 2000  Gabriele Cosmo  (stepinterface-V02-00-00)
 - QA code revision and cleanup (+fixes from CodeWizard filtering):
